--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ AllCops:
   TargetRubyVersion: 2.4
   DisplayCopNames: true
   DisabledByDefault: true
+  NewCops: enable
 
 # Prefer &&/|| over and/or.
 Style/AndOr:
@@ -9,9 +10,9 @@ Style/AndOr:
 
 # Do not use braces for hash literals when they are the last argument of a
 # method call.
-Style/BracesAroundHashParameters:
-  Enabled: true
-  EnforcedStyle: context_dependent
+#Style/BracesAroundHashParameters:
+#  Enabled: true
+#  EnforcedStyle: context_dependent
 
 # Align `when` with `case`.
 Layout/CaseIndentation:
@@ -101,11 +102,13 @@ Style/StringLiterals:
   EnforcedStyle: double_quotes
 
 # Detect hard tabs, no hard tabs.
-Layout/Tab:
+# Layout/Tab:
+Layout/IndentationStyle:
   Enabled: true
 
 # Blank lines should not have any spaces.
-Layout/TrailingBlankLines:
+# Layout/TrailingBlankLines:
+Layout/TrailingEmptyLines:
   Enabled: true
 
 # No trailing whitespace.
@@ -113,12 +116,13 @@ Layout/TrailingWhitespace:
   Enabled: true
 
 # Use quotes for string literals when they are enough.
-Style/UnneededPercentQ:
+#Style/UnneededPercentQ:
+Style/RedundantPercentQ:
   Enabled: true
 
 # Align `end` with the matching keyword or starting expression except for
 # assignments, where it should be aligned with the LHS.
-Lint/EndAlignment:
+Layout/EndAlignment:
   Enabled: true
   EnforcedStyleAlignWith: variable
 
@@ -127,8 +131,8 @@ Lint/RequireParentheses:
   Enabled: true
 
 # CMG Rules
-Rails:
-  Enabled: true
+#Rails:
+#  Enabled: true
 
 Bundler:
   Enabled: true
@@ -150,7 +154,7 @@ Style/SymbolArray:
   Description: 'Use %i or %I for arrays of symbols.'
   Enabled: true
 
-Metrics/LineLength:
+Layout/LineLength:
   Description: 'Limit lines to 120 characters.'
   Enabled: true
   Max: 120
@@ -161,12 +165,22 @@ Metrics/LineLength:
 Lint/AmbiguousBlockAssociation:
   Enabled: false
 
-Lint/RescueWithoutErrorClass:
+# Lint/RescueWithoutErrorClass:
+Style/RescueStandardError:
   Enabled: false
 
-Layout/AlignParameters:
+# Layout/AlignParameters:
+Layout/ParameterAlignment:
   Enabled: true
   EnforcedStyle: with_fixed_indentation
   SupportedStyles:
     - with_first_parameter
     - with_fixed_indentation
+
+#
+# new in 1.28
+#
+Security/CompoundHash:
+  Enabled: true
+Security/IoMethods:
+  Enabled: true
